--- a/index.html
+++ b/index.html
@@ -80,11 +80,9 @@
                         
 						<div class="inner">
 							<header class="major">
-								<h2>'Chinese media censorship'?</h2>
-								<p>The Anaconda in the Chandelier: Chinese Censorship Today
-Perry Link
-Princeton University
-In China's Mao years you could be detained and persecuted for talking with your
+								<P> Perry Link | Princeton University </P>
+								<h2>The Anaconda in the Chandelier: Chinese Censorship Today</h2>
+								<p>In China's Mao years you could be detained and persecuted for talking with your
 neighbor about your cat. The Chinese word for "cat" (mao, high level tone) is a nearhomophone
 for the name of the Great Leader (mao, rising tone), and a tip to the police
 from an eavesdropper who misheard one for the other and took you to be disrespectful
