--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 							<header class="major">
 								<P> Perry Link | Princeton University </P>
 								<h2>The Anaconda in the Chandelier:<br>Chinese Censorship Today</h2>
-								<p>In China's Mao years you could be detained and persecuted for talking with your
+								<p style="text-align:left;">In China's Mao years you could be detained and persecuted for talking with your
 neighbor about your cat. The Chinese word for "cat" (mao, high level tone) is a nearhomophone
 for the name of the Great Leader (mao, rising tone), and a tip to the police
 from an eavesdropper who misheard one for the other and took you to be disrespectful
@@ -94,7 +94,7 @@ no less biting is rampant in jokes and rhythmical ditties on oral networks throu
 country. Some of these sayings flatly attack the Communist Party ("If we don't root out
 corruption, the country will perish; if we do root out corruption, the Party will perish").
 Others address sensitive issues like the SARS cover-up, or dare to satirize top leaders by
-name. <br>
+name. <br><br>
 Yet repression remains an important problem, and its extent and methods are still
 poorly understood in the West. To appreciate it one must re-visit a dull but fundamental
 fact: the highest priority of the top leadership of the Communist Party remains, as in the
@@ -111,7 +111,7 @@ exercises overnight became an "evil cult" and a target for brutal repression. Th
 of the Chinese Democratic Party, all of whom are in prison today, ran afoul the same
 principle. Their crime was not the word "democratic" in their group's name (China has
 long had eight "democratic parties," all subordinate to the leadership of the Communist
-Party); their crime was to declare that their organization was independent. <br>
+Party); their crime was to declare that their organization was independent. <br><br>
 Censorship in intellectual matters broadly follows the same pattern. Nearly
 anything can be said in private, which is a big advance over the Mao years. And because
 academic journals have very small circulations, they are given somewhat more latitude
@@ -125,7 +125,7 @@ well to have allies or backers with whom to share the risk. It can also help to 
 indirection, such as pseudonyms, surrogates, or Aesopian expression. Even highlyplaced
 people, such as the sponsors of The Tiananmen Papers, a collection of internal
 documents on the genesis of the1989 Beijing massacre, choose to be indirect when going
-public. <br>
+public. <br><br>
 Although repression under Jiang Zemin (early 1990s to 2003) and Hu Jintao
 (2003- ) has applied to a narrower range of expression than it did under Deng Xiaoping
 (1978 to early 1990s), essential methods have changed little since the Deng era. These
@@ -145,7 +145,7 @@ hometown. But most censorship does not directly involve such happenings. It invo
 fear of such happenings. By "fear" I do not mean a clear and present sense of panic. I
 mean a dull, well-entrenched leeriness that people who deal with the Chinese censorship
 system usually get used to, and eventually accept as part of their natural landscape. But
-the controlling power of the fear is impressive nonetheless. <br>
+the controlling power of the fear is impressive nonetheless. <br><br>
 Outsiders to this system can be puzzled by its use of vagueness. The puzzlement
 was rife, for example, in the well-publicized cases of the sociologists Gao Zhan and Li
 Shaomin, one a legal U.S. resident and the other a U.S citizen, who were arrested two
@@ -155,7 +155,7 @@ they actually do? What line did they cross? How does the government define "spyi
 Why were these two people arrested for using "internal" materials (of which there are
 many kinds and levels, some of which are openly available in bookstores) while so many
 other scholars both inside and outside China routinely do the same thing and are not
-bothered? <br>
+bothered? <br><br>
 Although the answers to these questions in the cases of Gao Zhan and Li Shaomin
 remain a puzzle, the "vagueness" of the charges against them is entirely standard. It has
 been a fundamental tool in Chinese Communist censorship for decades. Just last month
@@ -164,7 +164,7 @@ conferences and the media, no one is to mention “political reform,” “const
 amendments,” or “the June Fourth incident” (meaning the Beijing massacre of 1989). No
 clearer guidelines are given, but harassment of violators has already begun.4
  From the
-viewpoint of the censoring authority, vagueness has four advantages:<br>
+viewpoint of the censoring authority, vagueness has four advantages:<br><br>
 --A vague prohibition frightens more people. If I, like Gao Zhan, am a Chinese
 scholar working in the U.S., and I don't know why she was arrested, then the reason
 could be virtually anything; therefore it could be what I am doing; therefore I pull back.
@@ -173,7 +173,7 @@ exactly why Gao Zhan was nabbed, then I could feel fairly confident that my own 
 was all right--or, if not, how to make it all right. (Result: few people would pull back.)
 Clarity serves the purpose of the censoring state only when it wants to curb a very
 specific kind of behavior; when it wants to intimidate a large group, vagueness works
-much better. <br>
+much better. <br><br>
 --A vague accusation pressures an individual to curtail a wider range of activity.
 If I don't know exactly why I was "wrong," I am induced to pay more attention to the
 state's strictures in every respect. This device has been used in literary and social
@@ -183,7 +183,7 @@ misbehavior? (Is long hair "spiritual pollution"? How long? Why were some people
 with long hair punished in the 1980s and others with the same length not? And so on.)
 The cognitive content of key terms is purposefully vague; only the negativity is
 unambiguous. To be safe, a person must pull back in every respect, and moreover must
-become his or her own policeman. <br>
+become his or her own policeman. <br><br>
 --A vague accusation is useful in maximizing what can be learned during forced
 confessions. When Li Shaomin was arrested, he asked his captors the reason and they
 answered, "You yourself know the reason." 
@@ -193,7 +193,7 @@ routinely say that they already possess an exhaustive amount of information on y
 crimes and that the purpose of interrogating you is not to get information but to measure
 your sincerity by observing your confession. In fact, though, this is often a lie. Normally
 the point is precisely to extract new information, which can then be used either on you or
-on someone else. Clarity about the accusation would obviously destroy this tactic. <br>
+on someone else. Clarity about the accusation would obviously destroy this tactic. <br><br>
 --A vague accusation allows arbitrary targeting. Leaders who exercise arbitrary
 power like to disguise the real reasons for their actions. In a culture like China's, where
 the leader's "face" represents his morality, which in turn is the basis for his political
@@ -216,7 +216,7 @@ But to understand the consequences of induced self-censorship in Chinese society
 we have to look beyond the headline cases of people like Li Shaomin and Gao Zhan. The
 pressures penetrate far deeper than those cases taken individually would suggest. The
 great majority of the other cases never come to light. Kang Zhengguo, a Chinese teacher
-at Yale who made the difficult decision to write about his own case6
+at Yale who made the difficult decision to write about his own case
 --well knowing that
 the price would be banishment from his home in China--estimates that "hundreds and
 thousands" of Chinese who return to their homeland are (as he was) invited for "chats" in
@@ -226,7 +226,7 @@ specifically warn people not to say anything about these threats when they go ba
 West. ("Let's not have any loose tongues;" "Remember to preserve the positive image of
 State Security;" etc.). I cannot corroborate Kang's estimate that there are "hundreds and
 thousands" of such interviews, but would note that just within my own circle of friends I
-have heard a dozen or so such stories in recent years. <br>
+have heard a dozen or so such stories in recent years. <br><br>
 For example, I am acquainted with a woman--a well-known critic of the Chinese
 government--who lives in the West but recently went back to China under a pseudonym
 so that she could visit her ailing mother. (Use of pseudonyms for this purpose is common
@@ -250,7 +250,7 @@ even natural. Most Chinese wend their ways through the political landscape witho
 questioning all of its boulders and ditches, but simply skirting them, getting where they
 want to go with minimum trouble. By contrast the "dissident," who does raise questions,
 or states principles, can seem a bit block-headed, and even in a sense deserving of the
-trouble he or she gets into. <br>
+trouble he or she gets into. <br><br>
 China scholars from non-Chinese backgrounds are affected as well. For example
 in 1999, when the quasi-religious Falungong organization suddenly made itself felt in
 China and the world, a major news organization invited one of the US's top scholars in a
@@ -268,7 +268,7 @@ that he could not help because he was "unable to guarantee to the relevant autho
 you will extend certain apologies on your involvement in The Tiananmen Papers so as to
 clear your visa problems." Unusual specificity is used when the aim is to achieve a
 specific result--in this case, apparently, the discrediting of a troublesome book by one of
-its own.) <br>
+its own.) <br><br>
 How often such things happen among Westerners, and what kind of selfcensorship
 results, are difficult things to measure. The problem is most salient, and
 unusually complex, for political scientists who study the Chinese government and need to
@@ -277,7 +277,7 @@ because people are reluctant to speak about them (no scholar likes to acknowledg
 but because the crucial functions are psychological and sometimes highly
 subtle. They happen within the recesses of private minds, where even the scholar him- or
 herself may not notice exactly what is happening. I do not say this to denigrate my
-fellow scholars. Over the years I have noticed the phenomenon in myself as well. <br>
+fellow scholars. Over the years I have noticed the phenomenon in myself as well. <br><br>
 
 At the risk of over-using myself as an example, let me expose some private
 phenomena. In 1995 the Chinese government put me on a blacklist, with eighteen others,
@@ -290,7 +290,7 @@ to censor myself. This is an irony of the kind of threat that can be carried out
 realized. Once carried out, the threat is spent, and thus it loses its power to control the
 behavior of the person threatened. It leaves the victim feeling punished at one level but
 liberated at another. Chinese peasants grasped this wisdom long ago when they invented
-their wonderful proverb “Dead pigs aren’t afraid of hot water.” <br>
+their wonderful proverb “Dead pigs aren’t afraid of hot water.” <br><br>
 But while boiled pigs are indeed immune from sting, the boiling of pigs, as we
 have noted above, can increase the intimidation of all the pigs who observe the boiling. I
 needed to remind myself of this fact a few days ago when The New York Times ran an
@@ -315,7 +315,7 @@ taboos in mind for an extended length of time eventually feel them to be natural
 violate them comes to seem not just politically incorrect but somehow culturally
 insensitive, as if one does not pay due respect to the "other side" in a meeting of cultures.
 But the taboos are not cultural in their origins so much as political, indeed political in a
-partisan way. <br>
+partisan way. <br> <br>
 In sum, the Chinese government's censorial authority in recent times has
 resembled not so much a man-eating tiger or fire-snorting dragon as a giant anaconda
 coiled in an overhead chandelier. Normally the great snake doesn't move. It doesn't have
@@ -323,7 +323,7 @@ to. It feels no need to be clear about its prohibitions. Its constant silent mes
 yourself decide," after which, more often than not, everyone in its shadow makes his or 
 her large and small adjustments--all quite "naturally." The Soviet Union, where Stalin's
 notion of "engineering the soul" was first pursued, in practice fell far short of what the
-Chinese Communists have achieved in psychological engineering. <br>
+Chinese Communists have achieved in psychological engineering. <br><br>
 As China's international involvements continue to grow with “globalization,” it
 becomes important for the world as a whole--not just Chinese people and Sinologists--to
 notice the problem of China’s censorship system. What are the effects of censorship--and
@@ -339,7 +339,7 @@ male, and educated--exulted on the Internet and cheered the flaming images. Late
 group of twenty Chinese scholars issued a statement in which they decried this reaction
 and then sought to explain it. Chinese young people, they wrote, choosing their words
 with great delicacy, had been "led astray by certain media themes and education
-guidelines in recent times." <br>
+guidelines in recent times." <br><br>
  They were referring to how, when the Deng Xiaoping
 regime began in the early 1990s to stoke Chinese nationalism as a way to recoup its
 popularity after the debacle at Tiananmen, it began to employ images of the US as a
@@ -351,7 +351,7 @@ beneath an anaconda in the chandelier, may or may not have agreed with what they
 themselves were writing--and indeed may not even have put the question of accuracy to
 themselves in exactly this way. What they wrote was by no means the only factor in why
 some Chinese youth cheered the collapse of the World Trade Center towers, but it had a
-part. <br>
+part. <br><br>
 The costs in the other direction, in Western perceptions of China, are harder to
 measure but perhaps even more far-reaching. Scholarship is affected more than
 journalism. When a Chinese-American scholar cancels a research trip to China, and
@@ -360,7 +360,7 @@ or even its Tang dynasty, how much is lost, in both the short and long runs? Whe
 certain questions are avoided, or written up in less-than-fully-candid ways, how much
 less well informed is the Western public? When a leading scholar chooses not to share
 what he knows on a topic, how much does the public lose by listening instead to secondbest
-answers from other sources? <br>
+answers from other sources? <br><br>
  A similar problem affects the international business world. While scholars,
 journalists, and overseas Chinese can be threatened with cut-off of their access to China,
 for businesses the primary threat is exclusion from China's huge potential market.
@@ -381,7 +381,7 @@ Corporation, a large Chinese oil company run by the Chinese state and now listed
 New York Stock Exchange, Chinese officials found the report excessively negative and
 demanded an apology. Two executives of the investments firm, with the writer of the
 report unhappily in tow, traveled to Beijing to deliver it. Will that analyst, next time
-around, again write the truth as he sees it? <br>
+around, again write the truth as he sees it? <br><br>
 Gordon Chang, formerly a lawyer at the prestigious American law firm Paul,
 Weiss, Rifkind, Wharton, & Garrison, worked many years introducing US businesses to
 China and grew accustomed to what he saw as a double standard between what
@@ -398,7 +398,7 @@ this may be for the best because, he estimates, "I would not be able to practice
 firm because I would be too controversial…I know many lawyers, fine and upstanding
 individuals otherwise, who refuse to utter a critical word about the regime except in
 private conversation. I know that they would not hire me now, and I would not even
-think of putting them in the position where they would have to say 'no.' <br>
+think of putting them in the position where they would have to say 'no.' <br><br>
 Here we see just how far that anaconda in the chandelier can project its power.
 Not only can it induce scholars to lie low, businessmen to pull punches, and lawyers to
 mince words, but even a rebel like Gordon Chang can "understand." He steers clear of
