--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ anything can be said in private, which is a big advance over the Mao years. And 
 academic journals have very small circulations, they are given somewhat more latitude
 than other publishing media. As long as scholars don't confront the top leadership head-on, they can write in scholarly journals pretty much as they choose. Moreover, in recent
 years, what many of them have chosen to write has been more favorable to the Party
-leadership than what they were inclined to write in the 1980s.<br>
+leadership than what they were inclined to write in the 1980s.<br> <br>
 But when an intellectual does want to express a politically sensitive idea in public,
 it remains the case that he or she must take a risk. As in the past, taking risks is not just a
 matter of personal courage, although courage remains an important factor. It helps as
