--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@ government and let it know there is a price for using blacklists. But then I con
 matter from the viewpoint of the security officials who run the censorship system and
 realized they would likely have an opposite reaction. Publish in The New York Times the
 fact that people who criticize the Chinese government can be banned from travel to China?
-This spreads, with credibility, the very message they wish to see spread. <br>
+This spreads, with credibility, the very message they wish to see spread. <br><br>
 One way or another, it always seems more difficult than it should be for a China
 scholar to write or speak in explicit contradiction of what the Beijing government has
 pronounced to be a "fundamental principle." Beijing's "one-China principle" is an
