--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@ page.</p>
 							</header>
 							<ul class="actions vertical">
 								<li><a href="mailto:webmaster@example.com" class="button fit special">Email Us</a>
-								<li><a href="#" onclick="return false;" class="button fit">Our Team</a></li>
+								<li><a href="dicimedia.com/btw" class="button fit">Our Team</a></li>
 							</ul>
 						</div>
 					</section>
@@ -481,7 +481,7 @@ page.</p>
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Beyond the Wall</li><li><a href="http://guidodici.com">Guido DiCi</a></li>
+							<li>&copy; Beyond the Wall</li><li><a href="http://guidodici.com">Guido DiCi</a> <br> Disclaimer: This is a fictional campaign that was developed for a University project.</li>
 						</ul>
 					</footer>
 
