--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@ page.</p>
 							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Beyond the Wall</li><li><a href="http://dicimedia.com">Guido DiCi</a> /li>
+							<li>&copy; Beyond the Wall</li><li><a href="http://dicimedia.com">Guido DiCi</a></li>
 							<li> This campaign was designed developed for a university project at Rochester Institute of Technology.</li>
 						</ul>
 					</footer>
