--- a/index.html
+++ b/index.html
@@ -433,25 +433,23 @@ page.</p>
 						<div class="inner">
 							<header class="major">
 								<h2>How Can I help?</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-							</header>
+															</header>
 							<ul class="features">
                                  <li class="icon fa-graduation-cap">
-									<h3>Gain Knowledge</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>GarnerKnowledge</h3>
+									<p>The above article by Perry Link is a great introduction to the censorship issues facing China. It's a broad and complicated topic that we encourage all of our readers to investigate further. Knowledge is power!</p>
 								</li>
 								<li class="icon fa-retweet">
 									<h3>Spread the word</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<p>Awareness is difficult to come by these days. Help us get our message out by following us online (@GoBTW) and sharing the Beyond the Wall video.</p>
 								</li>
 								<li class="icon fa-snapchat-ghost">
-									<h3>Use Our Snap Filter</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Participate on Snapchat</h3>
+									<p>On October 1st, show your support for the people of China by taking a selfie with official Beyond the Wall Snapchat filter.</p>
 								</li>
 								<li class="icon fa-heart">
-									<h3>Donate to the cause</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Donate to the Cause</h3>
+									<p>100% of our proceeds go towards special interest groups acting on behalf of the People's Republic of China to positively influence Sino-American relations.</p>
 								</li>
                             
 							</ul>
