--- a/index.html
+++ b/index.html
@@ -436,16 +436,16 @@ page.</p>
 															</header>
 							<ul class="features">
                                  <li class="icon fa-graduation-cap">
-									<h3>GarnerKnowledge</h3>
-									<p>The above article by Perry Link is a great introduction to the censorship issues facing China. It's a broad and complicated topic that we encourage all of our readers to investigate further. Knowledge is power!</p>
+									<h3>Garner Knowledge</h3>
+									<p>The article by Perry Link is a great introduction to the censorship issues facing China. Still, it's a broad and complicated topic that we encourage all of our readers to investigate further. Knowledge is power!</p>
 								</li>
 								<li class="icon fa-retweet">
 									<h3>Spread the word</h3>
-									<p>Awareness is difficult to come by these days. Help us get our message out by following us online (@GoBTW) and sharing the Beyond the Wall video.</p>
+									<p>Awareness is difficult to come by these days. Help us get our message out by following us online (@GoBTW) and sharing the official Beyond the Wall video.</p>
 								</li>
 								<li class="icon fa-snapchat-ghost">
-									<h3>Participate on Snapchat</h3>
-									<p>On October 1st, show your support for the people of China by taking a selfie with official Beyond the Wall Snapchat filter.</p>
+									<h3>Use Our Snap Filter</h3>
+									<p>On October 1st, China's national day, show your support for their citizens by taking a selfie with official Beyond the Wall Snapchat filter.</p>
 								</li>
 								<li class="icon fa-heart">
 									<h3>Donate to the Cause</h3>
