--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ page.</p>
 								</li>
 								<li class="icon fa-heart">
 									<h3>Donate to the Cause</h3>
-									<p>100% of our proceeds go towards special interest groups acting on behalf of the People's Republic of China to positively influence Sino-American relations.</p>
+									<p>100% of our proceeds go towards special interest groups acting on behalf of civil rights and media freedom in the People's Republic of China.</p>
 								</li>
                             
 							</ul>
